--- a/Phase5/WebForms/Site.Master
+++ b/Phase5/WebForms/Site.Master
@@ -11,6 +11,8 @@
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
+    <link rel="stylesheet" href="~/Content/Site.css">
+    
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
