--- a/Phase6/MvcApplication/Views/Shared/_Layout.cshtml
+++ b/Phase6/MvcApplication/Views/Shared/_Layout.cshtml
@@ -23,6 +23,15 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Projects", "Index", "Projects")</li>
+                    @{
+                        var id = System.Web.HttpContext.Current.Session["Project"];
+                        if (id != null)
+                        {
+                            <li>@Html.ActionLink("Tasks", "Index", "Tasks")</li>
+                        }
+                    }
+                    <li>@Html.ActionLink("Resources", "Index", "Resources")</li>
                 </ul>
             </div>
         </div>
