--- a/Phase6/MvcApplication/Views/Tasks/Details.cshtml
+++ b/Phase6/MvcApplication/Views/Tasks/Details.cshtml
@@ -62,6 +62,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.TaskID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.TaskId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
