--- a/Phase6/MvcApplication/Views/Tasks/Edit.cshtml
+++ b/Phase6/MvcApplication/Views/Tasks/Edit.cshtml
@@ -16,7 +16,7 @@
         <h4>Task</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.TaskID)
+        @Html.HiddenFor(model => model.TaskId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
