--- a/Phase6/MvcApplication/Views/Tasks/Index.cshtml
+++ b/Phase6/MvcApplication/Views/Tasks/Index.cshtml
@@ -54,9 +54,9 @@
             @Html.DisplayFor(modelItem => item.Project.ProjectName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.TaskID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.TaskID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.TaskID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.TaskId }) |
+            @Html.ActionLink("Details", "Details", new { id=item.TaskId }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.TaskId })
         </td>
     </tr>
 }
