--- a/Phase6/MvcApplication/Views/Resources Template/Edit.cshtml
+++ b/Phase6/MvcApplication/Views/Resources Template/Edit.cshtml
@@ -7,10 +7,11 @@
 
 <h2>Edit</h2>
 
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Resource</h4>
         <hr />
@@ -44,3 +45,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
