--- a/Phase6/MvcApplication/Views/Resources/Index.cshtml
+++ b/Phase6/MvcApplication/Views/Resources/Index.cshtml
@@ -21,21 +21,20 @@
         <th></th>
     </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ResourceName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ResourceRate)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ResourceId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ResourceId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ResourceId })
-            </td>
-        </tr>
-    }
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.ResourceName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ResourceRate)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.ResourceId }) |
+            @Html.ActionLink("Details", "Details", new { id=item.ResourceId }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.ResourceId })
+        </td>
+    </tr>
+}
 
 </table>
