--- a/Phase6/MvcApplication/Views/Tasks/Delete.cshtml
+++ b/Phase6/MvcApplication/Views/Tasks/Delete.cshtml
@@ -62,8 +62,7 @@
 
     </dl>
 
-    @using (Html.BeginForm())
-    {
+    @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
