--- a/Phase6/MvcApplication/Views/Tasks/Edit.cshtml
+++ b/Phase6/MvcApplication/Views/Tasks/Edit.cshtml
@@ -7,11 +7,10 @@
 
 <h2>Edit</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>Task</h4>
         <hr />
@@ -59,7 +58,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProjectId, "Project from which it belongs", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProjectId, "ProjectId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
@@ -77,7 +76,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
