--- a/Phase6/MvcApplication/Views/Tasks/ViewResources.cshtml
+++ b/Phase6/MvcApplication/Views/Tasks/ViewResources.cshtml
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Assign Resource", "Assignresource", new { id = Model.TaskId }) |
+    @Html.ActionLink("Assign Resources", "Assignresource", new { id = Model.TaskId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
